--- a/cmd/web/admin/site/index.html
+++ b/cmd/web/admin/site/index.html
@@ -44,45 +44,18 @@
                 </div>
                 <div id="tx-job-list-box" class="w3-bar w3-border-bottom w3-border-teal tx-margin-top-4" style="display: none"></div> 
                 <div id="tx-form-box" class="w3-container tx-margin-top-8" style="display: none"></div>
-                <div id="tx-category-list-box" class="w3-bar w3-border-bottom w3-border-teal tx-margin-top-8" style="display: none">
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">HomingAgent</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">Configuration</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">Metrics</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">Management</span> 
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">HomingAgent</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">Configuration</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">Metrics</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Management</span>        
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">HomingAgent</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Configuration</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Metrics</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Management</span>        
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">HomingAgent</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Configuration</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Metrics</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Management</span>               
-                </div>
-                <div id="tx-instance-list-box" class="w3-bar w3-border-bottom w3-border-teal tx-margin-top-8" style="display: none">
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">HomingAgent</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">Configuration</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">Metrics</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">Management</span> 
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">HomingAgent</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">Configuration</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-category-opt">Metrics</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Management</span>        
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">HomingAgent</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Configuration</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Metrics</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Management</span>        
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">HomingAgent</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Configuration</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Metrics</span>
-                     <span class="w3-bar-item w3-green w3-tag tx-text-20 tx-padding-button tx-margin-right-4 tx-margin-bottom-4 tx-opt">Management</span>         
-                </div>    
+                <fieldset class="tx-after-login">
+                    <legend class="tx-text-16">Categories</legend>
+                    <div id="tx-category-list-box" class="w3-bar tx-margin-top-8" style="display: none"></div>
+                </fieldset>
+                <fieldset class="tx-after-login">
+                    <legend class="tx-text-16">Instances</legend>
+                    <div id="tx-instance-list-box" class="w3-bar tx-margin-top-8" style="display: none"></div>
+                </fieldset>    
             </div>
         </div>
         <script>
+            after_login(false)
             Html.eventWithId('#tx-info-box-close',()=>{Html.closeWithId('#tx-info-box');});
             if (!Admin.query().authenticated){
                 on_logout();
@@ -101,6 +74,7 @@
             });
 
             function on_logout(){
+                after_login(false);
                 Admin.getJson("/admin/web/login.json",resp=>{
                     Html.form("#tx-form-box","login",resp,false,(data)=>{
                         console.log(data);
@@ -126,6 +100,7 @@
             }
 
             function on_login(auth){
+                after_login(true);
                 Admin.login(auth);
                 Admin.getJson("/admin/webprotected/task.bar.json",(resp)=>{
                     Html.taskList("#tx-task-list","task",resp,(a)=>{
@@ -183,6 +158,15 @@
                     Html.categoryList("#tx-category-list-box","cc",resp,cid=>{
                         console.log(cid)
                     });    
+                });
+            }
+            function after_login(open){
+                document.querySelectorAll(".tx-after-login").forEach(a=>{
+                    if(open){
+                        a.style.display = "block";
+                    }else{
+                        a.style.display = "none";
+                    }
                 });
             }
         </script>
