--- a/cmd/web/admin/site/index.html
+++ b/cmd/web/admin/site/index.html
@@ -50,6 +50,9 @@
                 </fieldset>
                 <fieldset class="tx-after-login">
                     <legend class="tx-text-16">Instances</legend>
+                    <select id='tx-instance-load-select' class="w3-select tx-text-12">
+                        
+                    </select>
                     <div id="tx-instance-list-box" class="w3-bar tx-margin-top-8" style="display: none"></div>
                 </fieldset>    
             </div>
@@ -157,13 +160,18 @@
                     Html.openWithId("#tx-form-box"); 
                 });   
             }
+
             function on_task_change(tn){
                 Admin.getJson("/admin/loadcategories/"+tn,resp=>{
                     Html.categoryList({id:"#tx-category-list-box",prefix:"cc"},resp,cid=>{
                         load_category(cid);
+                    });
+                    Html.categorySelect({id:"#tx-instance-load-select"},resp,(c)=>{
+                        load_instances(c);
                     });    
                 });
             }
+
             function after_login(open){
                 document.querySelectorAll(".tx-after-login").forEach(a=>{
                     if(open){
@@ -173,15 +181,49 @@
                     }
                 });
             }
+
             function load_category(cid){
                 Admin.getJson("/admin/loadcategory/"+cid+"/n",resp=>{
                     console.log(resp);
                     Html.instanceForm({id:"#tx-form-box",prefix:"category",closeable:true},resp,data=>{
-                        console.log(data);
+                        Admin.postJson("/admin/saveconfig",data,resp=>{
+                            console.log(data);
+                            Html.messageWithId("#tx-info-box-content",resp.message);    
+                            Html.openWithId("#tx-info-box");
+                        });
+                    },(prop,callback)=>{
+                        console.log(prop);
+                        Admin.getJson("/admin/loadconfigs/"+prop+"/10",cats=>{
+                            callback(cats);
+                        });
                     });
                     Html.openWithId("#tx-form-box");
                 });
             }
+
+            function load_instances(cat){
+                Admin.getJson("/admin/loadconfigs/"+cat+"/10",resp=>{
+                    console.log(resp);
+                    Html.instanceList({id:"#tx-instance-list-box",prefix:"ins"},resp,(id)=>{
+                        console.log(id);
+                        load_instance(id);
+                    });
+                });
+            }
+
+            function load_instance(id){ 
+                Admin.getJson("/admin/loadconfig/"+id,resp=>{
+                    console.log(resp);
+                    populate_instance(resp);
+                });   
+            }
+
+            function populate_instance(ins){
+                Admin.getJson("/admin/loadcategory/0/"+ins.ConfigurationCategory,resp=>{
+                    console.log(resp);
+                });
+            }
+
         </script>
     </body>
 </html>
