--- a/cmd/web/admin/site/index.html
+++ b/cmd/web/admin/site/index.html
@@ -122,7 +122,7 @@
                     });
                 });
                 Admin.getJson("/admin/webprotected/type.list.json",(resp)=>{
-                    Html.typeList(resp);    
+                    Html.setup(resp);    
                 });
                 Admin.getJson("/admin/loadenum/all",resp=>{
                     Html.enumList(resp);
@@ -149,7 +149,7 @@
 
             function create_new_category(){
                 Html.categoryForm({id:"#tx-form-box"},(data)=>{
-                    let valid ={Name:data.Name,Description:data.Description,Scope:data.Scope,Properties:[]};
+                    let valid ={Name:data.Name,Description:data.Description,Scope:data.Scope,ScopeSequence:data.ScopeSequence,Properties:[]};
                     for( let i=0;i<data.ix;i++){
                         if("c-entry"+i in data){
                             let ev = data["c-entry"+i];
@@ -164,11 +164,12 @@
                 Html.openWithId("#tx-form-box");   
             }
 
-            function on_task_change(tn){
-                set_task_header(tn,"settings");
+            function on_task_change(tn,ts){
+                set_task_header(tn+":"+ts,"settings");
                 Html.closeWithId("#tx-form-box");
                 Html.closeWithId("#tx-instance-list-box");
-                Admin.getJson("/admin/loadcategories/"+tn,resp=>{
+                Admin.getJson("/admin/category/load/0/scope/1/"+ts,resp=>{
+                    Html.typeList(tn,resp);
                     Html.categoryList({id:"#tx-category-list-box",prefix:"cc"},resp,cid=>{
                         load_category(cid);
                     });
@@ -189,7 +190,7 @@
             }
 
             function load_category(cid){
-                Admin.getJson("/admin/loadcategory/"+cid+"/n",resp=>{
+                Admin.getJson("/admin/category/load/"+cid+"/n/0/0",resp=>{
                     Html.instanceForm({id:"#tx-form-box",prefix:"category",closeable:true},resp,data=>{
                         Admin.postJson("/admin/saveconfig",data,resp=>{
                             Html.messageWithId("#tx-info-box-content",resp.message);    
@@ -216,7 +217,7 @@
             }
 
             function populate_instance(ins){
-                Admin.getJson("/admin/loadcategory/0/"+ins.ConfigurationCategory,resp=>{
+                Admin.getJson("/admin/category/load/0/"+ins.ConfigurationCategory+"/0/0",resp=>{
                     Html.instanceForm({id:"#tx-form-box",prefix:"ins"},resp,data=>{
                         Admin.postJson("/admin/saveconfig",data,resp=>{
                             Html.messageWithId("#tx-info-box-content",resp.message);    
